fix log in form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<div class="hero-image">
 			<img src="img/hero-image.png">
-		</div>
+		</div> 
 
 			<div class="login">
 				<div class="login-content">
@@ -24,15 +24,22 @@
 						</a>
 					</div>
 					<div class="login-header">
-						<p>Log on to use the internets hotspot service</p>
+						<p>Log on to use the internet hotspot service</p>
 					</div>
 					<div class="login-form">
 						<form>
-							<input type="text" name="username">
-							<input type="text" name="password">
-							<button class="log-on-btn">
+							<div class="form-input">
+								<input type="name" name="username" placeholder="Username">
+							</div>
+							<div class="form-input">
+								<input type="password" name="password" placeholder="Password">
+							</div>
+							<div class="submit-btn">
+								<input type="submit" name="password" value="Get Access">
+							</div>
+							<!--<button class="submit-btn">
 								<p>Get Access</p>
-							</button>
+							</button> -->
 						</form>					
 					</div>
 				</div>
