done final finally

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						</a>
 					</div>
 					<div class="login-header">
-						<p>Log on to use the internet hotspot service</p>
+						<p>Log on to use the internet <br>hotspot service</p>
 					</div>
 					<div class="login-form">
 						<form>
@@ -41,6 +41,9 @@
 								<p>Get Access</p>
 							</button> -->
 						</form>					
+					</div>
+					<div class="footer">
+						<p>Free trial available, <a href="#">click here</a></p>
 					</div>
 				</div>
 			</div>
