--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="container">
 
 		<div class="hero-image">
-			<img src="img/hero-image.png">
+			<img src="img/hero-image.jpg">
 		</div> 
 
 			<div class="login">
