--- a/index.html
+++ b/index.html
@@ -2,51 +2,59 @@
 <html>
 
 <head>
-		<title>Hotspot| Log In</title> 
+		<title>Hotspot| Log In</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 		<meta charset="utf-8">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
+
+		<style>
+			html, body {
+				height: 100%;
+			}
+		</style>
 </head>
 
-<body>
+<body >
 
-		<div class="container">
+		<div class="container" style="height: 100%">
+			<!--
+			<div class="hero-image">
+				<img src="img/hero-image.jpg">
+			</div>
+			--> 
 
-		<div class="hero-image">
-			<img src="img/hero-image.jpg">
-		</div> 
-
-			<div class="login">
-				<div class="login-content">
-					<div class="login-logo">
-						<a href="https://workstationng.com">
-							<img src="img/logo.png" alt="workstation">
-						</a>
-					</div>
-					<div class="login-header">
-						<p>Log on to use the internet <br>hotspot service</p>
-					</div>
-					<div class="login-form">
-						<form>
-							<div class="form-input">
-								<input type="name" name="username" placeholder="Username">
-							</div>
-							<div class="form-input">
-								<input type="password" name="password" placeholder="Password">
-							</div>
-							<div class="submit-btn">
-								<input type="submit" name="password" value="Get Access">
-							</div>
-							<!--<button class="submit-btn">
-								<p>Get Access</p>
-							</button> -->
-						</form>					
-					</div>
-					<div class="footer">
-						<p>Free trial available, <a href="#">click here</a></p>
+				<div class="login">
+					<div class="login-content">
+						<div class="login-logo">
+							<a href="https://workstationng.com">
+								<img src="img/logo.png" alt="workstation">
+							</a>
+						</div>
+						<div class="login-header">
+							<p>Log on to use the internet <br>hotspot service</p>
+						</div>
+						<div class="login-form">
+							<form>
+								<div class="form-input">
+									<input type="name" name="username" placeholder="Username">
+								</div>
+								<div class="form-input">
+									<input type="password" name="password" placeholder="Password">
+								</div>
+								<div class="submit-btn">
+									<input type="submit" name="password" value="Get Access">
+								</div>
+								<!--<button class="submit-btn">
+									<p>Get Access</p>
+								</button> -->
+							</form>					
+						</div>
+						<div class="footer">
+							<p>Free trial available, <a href="#">click here</a></p>
+						</div>
 					</div>
 				</div>
-			</div>
 
 				
 		</div>
